fix: alignment

--- a/solution/css/main.css
+++ b/solution/css/main.css
@@ -55,6 +55,7 @@ li {
 
 .header {
   display: flex;
+  align-items: center;
   justify-content: space-between;
   margin-block: var(--gap-30);
 }
